# fscache

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml
docs/pages/: index.html
src/: cache.rs  config.rs  copier.rs  fuse_fs.rs  inode.rs  lib.rs  main.rs  plex_db.rs  predictor.rs  preset.rs  scheduler.rs  telemetry.rs  utils.rs
src/cache/: db.rs  io.rs  manager.rs  mod.rs  tee.rs
src/engine/: action.rs  copier.rs  mod.rs  scheduler.rs
src/fuse/: fusefs.rs  mod.rs
src/ipc/: broadcast_layer.rs  client.rs  mod.rs  protocol.rs  server.rs
src/presets/: mod.rs  plex_episode_prediction.rs  prefetch.rs
src/tui/: app.rs  logging.rs  metrics_layer.rs  mod.rs  state.rs  ui.rs
tests/: cache_eviction_e2e.rs  cache_io_e2e.rs  cache_overlay.rs  e2e.rs  integrity.rs  invalidation_e2e.rs  ipc_e2e.rs  metadata.rs  multi_mount.rs  playback_detection.rs  prediction.rs  prefetch_e2e.rs  presets.rs  resilience.rs  system.rs
tests/common/: mod.rs
tests/docker/: run.sh  test-config.toml
tests/presets/: plex_episode_prediction.rs  prefetch.rs
