[package]
name = "plex_hot_cache"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "plex_hot_cache"
path = "src/lib.rs"

[[bin]]
name = "plex-hot-cache"
path = "src/main.rs"

[dependencies]
fuser = "0.17"
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
filetime = "0.2"
