[package]
name = "fscache"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "fscache"
path = "src/lib.rs"

[[bin]]
name = "fscache"
path = "src/main.rs"

[dependencies]
fuser = "0.17"
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs", "net"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
filetime = "0.2"
